Update issue templates

--- a/.github/ISSUE_TEMPLATE/이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-템플릿.md
@@ -1,7 +1,7 @@
 ---
-name: Feature request
+name: 이슈 템플릿
 about: Suggest an idea for this project
-title: ''
+title: "[✨Feat, ♻️Refactor] 제목 작성  "
 labels: ''
 assignees: ''
 
