Update issue templates

--- a/.github/ISSUE_TEMPLATE/이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/이슈-템플릿.md
@@ -1,7 +1,7 @@
 ---
 name: 이슈 템플릿
 about: Suggest an idea for this project
-title: "[✨Feat, ♻️Refactor] 제목 작성  "
+title: "[✨Feat, ♻️Refactor,\U0001F484 Styles] 제목"
 labels: ''
 assignees: ''
 
